Añadido selector de pasatiempo durante la partida

--- a/server/index.html
+++ b/server/index.html
@@ -81,6 +81,9 @@
                     
                 </div>
             </td>
+            <td>
+                <button class="btn" onclick="mostrarSelectorPasatiempo()">📈 Cambiar Nivel</button>
+            </td>
 
         </tr>
         
